RESOLVED FIXED65465
[Qt] OpenGLShims does not build on ARM
https://bugs.webkit.org/show_bug.cgi?id=65465
Summary [Qt] OpenGLShims does not build on ARM
Benjamin Poulain
Reported 2011-08-01 06:20:35 PDT
Some of the compilation issues: -lookupOpenGLFunctionAddress defined but not used -glBlitFramebuffer && glRenderbufferStorageMultisample undefined symbols on OpenGL ES 2 -GLchar not defined (although the official header defines it)
Attachments
Patch (5.51 KB, patch)
2011-08-01 06:27 PDT, Benjamin Poulain
no flags
Patch (4.84 KB, patch)
2011-08-01 06:52 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2011-08-01 06:27:43 PDT
Benjamin Poulain
Comment 2 2011-08-01 06:31:13 PDT
This patch is just a build fix. To get everything right, the code using glBlitFramebuffer and glRenderbufferStorageMultisample should check if the functions exist at runtime. Alternatively, the code using those function could be #ifdefined as well but that would spread in a rather ugly way. Redefining: typedef char GLchar; seems to work on GCC but I doubt that is portable. If someone has a better idea, I'd be glad to update that line :)
Early Warning System Bot
Comment 3 2011-08-01 06:39:16 PDT
Benjamin Poulain
Comment 4 2011-08-01 06:52:31 PDT
WebKit Review Bot
Comment 5 2011-08-01 09:10:27 PDT
Comment on attachment 102513 [details] Patch Clearing flags on attachment: 102513 Committed r92130: <http://trac.webkit.org/changeset/92130>
WebKit Review Bot
Comment 6 2011-08-01 09:10:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.