[Qt] OpenGLShims does not build on ARM https://bugs.webkit.org/show_bug.cgi?id=65465

Patch by Benjamin Poulain <benjamin@webkit.org> on 2011-08-01
Reviewed by Noam Rosenthal.

Fix the build with OpenGL ES 2:
-lookupOpenGLFunctionAddress() was defined but not used for OpenGL ES.
-glBlitFramebuffer() and glRenderbufferStorageMultisample() are not part of the specification.
When those are available as platform extension, the extension has been added.
-GLchar is not defined on some platform. The patch adds the same typedef as the official definition
to avoid conflicts.

* platform/graphics/cairo/OpenGLShims.cpp:
(lookupOpenGLFunctionAddress):
(WebCore::initializeOpenGLShims):
* platform/graphics/cairo/OpenGLShims.h:

Canonical link: https://commits.webkit.org/81273@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92130 268f45cc-cd09-0410-ab3c-d52691b4dbfc